nobase_include_HEADERS = \
	misc/array.h \
	misc/nmpa.h \
	misc/nmpa_pba.h \
	pinba/bloom.h \
	pinba/collector.h \
	pinba/coordinator.h \
	pinba/dictionary.h \
	pinba/engine.h \
	pinba/globals.h \
	pinba/histogram.h \
	pinba/multi_merge.h \
	pinba/nmsg_channel.h \
	pinba/nmsg_poller.h \
	pinba/nmsg_socket.h \
	pinba/nmsg_ticker.h \
	pinba/packet.h \
	pinba/packet_impl.h \
	pinba/repacker.h \
	pinba/repacker_dictionary.h \
	pinba/snapshot_dictionary.h \
	pinba/report.h \
	pinba/report_by_packet.h \
	pinba/report_by_request.h \
	pinba/report_by_timer.h \
	pinba/report_key.h \
	pinba/report_util.h \
	#
